snapshots/syntax/library/functions/financial/fv/fv_select_case.snap
---
source: src/syntax/library/functions/financial/fv.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: SelectCaseStatement
      children:
        - kind: SelectKeyword
          text: Select
        - kind: Whitespace
          text: " "
        - kind: CaseKeyword
          text: Case
        - kind: Whitespace
          text: " "
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: investment
        - kind: Newline
          text: "\n"
        - kind: Whitespace
          text: "    "
        - kind: CaseClause
          children:
            - kind: CaseKeyword
              text: Case
            - kind: Whitespace
              text: " "
            - kind: IntegerLiteral
              text: "1"
            - kind: Newline
              text: "\n"
            - kind: StatementList
              children:
                - kind: Whitespace
                  text: "        "
                - kind: AssignmentStatement
                  children:
                    - kind: IdentifierExpression
                      children:
                        - kind: Identifier
                          text: result
                    - kind: Whitespace
                      text: " "
                    - kind: EqualityOperator
                      text: "="
                    - kind: Whitespace
                      text: " "
                    - kind: CallExpression
                      children:
                        - kind: Identifier
                          text: Fv
                        - kind: LeftParenthesis
                          text: (
                        - kind: ArgumentList
                          children:
                            - kind: Argument
                              children:
                                - kind: BinaryExpression
                                  children:
                                    - kind: NumericLiteralExpression
                                      children:
                                        - kind: SingleLiteral
                                          text: "0.06"
                                    - kind: Whitespace
                                      text: " "
                                    - kind: DivisionOperator
                                      text: /
                                    - kind: Whitespace
                                      text: " "
                                    - kind: NumericLiteralExpression
                                      children:
                                        - kind: IntegerLiteral
                                          text: "12"
                            - kind: Comma
                              text: ","
                            - kind: Whitespace
                              text: " "
                            - kind: Argument
                              children:
                                - kind: BinaryExpression
                                  children:
                                    - kind: IdentifierExpression
                                      children:
                                        - kind: Identifier
                                          text: years
                                    - kind: Whitespace
                                      text: " "
                                    - kind: MultiplicationOperator
                                      text: "*"
                                    - kind: Whitespace
                                      text: " "
                                    - kind: NumericLiteralExpression
                                      children:
                                        - kind: IntegerLiteral
                                          text: "12"
                            - kind: Comma
                              text: ","
                            - kind: Whitespace
                              text: " "
                            - kind: Argument
                              children:
                                - kind: UnaryExpression
                                  children:
                                    - kind: SubtractionOperator
                                      text: "-"
                                    - kind: NumericLiteralExpression
                                      children:
                                        - kind: IntegerLiteral
                                          text: "100"
                        - kind: RightParenthesis
                          text: )
                    - kind: Newline
                      text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SelectKeyword
          text: Select
